releng: add cadence & report
Change-Id: I9cefbfb4e175ebbb7b616dc1951ea977ca27267c
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>