@@ -342,7 +342,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,install_cots_features,common,PublishStep_5,common_feature,BuildStep_7,PublishStep_8,accuracy_feature,resourcereuse,PublishStep_11,PublishStep_12,resourcereuse_feature" />
+	<target name="all" depends="CleanStep_1,TP_juno,install_cots_features,common,PublishStep_5,common_feature,BuildStep_7,PublishStep_8,accuracy_feature,resourcereuse,PublishStep_11,PublishStep_12,resourcereuse_feature,BuildStep_14,PublishStep_15,cadence_feature,report,PublishStep_18,PublishStep_19,PublishStep_20,report_feature" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
 	</target>
@@ -444,6 +444,80 @@ This file was generated by Eclipse EGF
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
                 <arg value="${relengDir}/buckminster_resourcereuse/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
+    <target name="BuildStep_14" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_BuildStep_14/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_BuildStep_14/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
+    <target name="report" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_report/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_report/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -565,6 +639,122 @@ This file was generated by Eclipse EGF
 			<fileset dir="${result}/output">
 				<include name="org.polarsys.kitalpha.resourcereuse.feature*/site.p2/*"/>
 				<include name="org.polarsys.kitalpha.resourcereuse.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_15" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.kitalpha.cadence.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.cadence.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.cadence.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.cadence.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.cadence.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_18" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.kitalpha.report.example.customization.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.report.example.customization.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.report.example.customization.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.report.example.customization.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.report.example.customization.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_19" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.kitalpha.report.ui.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.report.ui.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.report.ui.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.report.ui.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.report.ui.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_20" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.kitalpha.report.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.report.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.report.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.report.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.report.feature*/site.p2/**"/>
 			</fileset>
 			<filtermapper>
 				<replaceregex pattern=".*site\.p2" replace="" />
@@ -799,6 +989,82 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.kitalpha.resourcereuse.ui.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.resourcereuse.ui.source.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="cadence_feature" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.cadence.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.cadence.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.cadence.source.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="report_feature" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.report.example.customization.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.report.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.report.ui.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.report.example.customization.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.report.example.customization.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.report.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.report.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.report.ui.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.report.ui.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
